### [Unreleased]
#### Added
#### Changed
#### Deprecated
#### Removed
#### Fixed
#### Security

### [1.0.0]
#### Added
- Display name of group when it cannot be found
#### Changed
- Let backend do requests to API of Mobilizon instance for increased privacy
- Update dependencies
#### Fixed
- Fix displaying more than one block in the editor

### [0.11.5]
#### Changed
- Confirm compatibility with WordPress 6.5

### [0.11.4]
#### Changed
- Confirm compatibility with WordPress 6.4
- Update dependencies

### [0.11.3]
#### Fixed
- Clean up distributed files

### [0.11.2]
#### Changed
- Update dependencies
- Confirm compatibility with WordPress 6.3

### [0.11.1]
#### Fixed
- Revert minimum PHP version to 7.4 to allow some more time for upgrading PHP

### [0.11.0]
#### Changed
- Update dependencies
- Confirm compatibility with WordPress 6.2
#### Security
- Set minimum PHP version to oldest stable 8.0

### [0.10.1]
#### Changed
- Confirm compatibility with WordPress 6.1
- Update dependencies

### [0.10.0]
#### Added
- Add Gutenberg events list block
- Show loading indicator during request
#### Changed
- Set list style type to none and left padding to zero for all occurences
- Move shortcut usage description into installation section in `readme.txt`
- Update dependencies

### [0.9.1] - 2020-05-19
#### Fixed
- Fix WordPress compatibility version number

### [0.9.0] - 2020-05-19
#### Added
- Improve explanation of group name filter
#### Changed
- Update dependencies
- Confirm compatibility with WordPress 6.0
#### Fixed
- Fix displaying error message for the case the group is not found

### [0.8.0] - 2022-01-09
#### Added
- Add support for older browsers using babel
#### Changed
- Confirm compatibility with WordPress 5.9
- Update dependencies
#### Fixed
- Use ES modules correctly
- Trim events' location

### [0.7.0] - 2021-12-23
#### Added
- Add specific error message for the case the group is not found
- Add code formatter prettier
#### Changed
- Update dependencies