@@ -22,6 +22,7 @@ class EventsListShortcut {
     $url = Settings::getUrl();
     $eventsCount = $atts_with_overriden_defaults['events-count'];
     $groupName = $atts_with_overriden_defaults['group-name'];
+    $classNamePrefix = NAME;
 
     ob_start();
     try {
@@ -31,7 +32,6 @@ class EventsListShortcut {
         $events = GraphQlClient::get_upcoming_events($url, (int) $eventsCount);
       }
 
-      $classNamePrefix = NAME;
       $locale = get_locale();
       $isShortOffsetNameShown = Settings::isShortOffsetNameShown();
       $timeZone = wp_timezone_string();
